--- a/app/courses.html
+++ b/app/courses.html
@@ -135,11 +135,73 @@
 					</ul>
 
 					<div class="bar-bottom">
-						
+						<div class="price-normal">
+							<p class="title">מחיר רגיל</p>
+							<p class="price">2,800</p>
+						</div>
+						<div class="price-sale">
+							<p class="title">מחיר הרשמה מוקדמת</p>
+							<p class="price">₪1,999</p>
+						</div>
+						<a href="#" class="button">
+							<span>לפרטים נוספים </span>
+						</a>
 					</div>
 				</div>
 				<div class="part part-left">
-					<img src="images/inner/about/1.jpg" alt="">
+					<img src="images/inner/courses/1.jpg" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="course inverse">
+		<div class="section-inner">
+
+			<div class="parts">
+				<div class="part part-right">
+					<div class="section-title side-right wait-for-scroll">
+						<p class="pre">קורס ברמנים</p>
+						<p class="main">מקצועי</p>
+					</div>
+
+					<div class="content">
+						<p>קורס זה כולל 11 מפגשים בבר אמיתי בו המדריך יחד עם הסטודנטים מתרגלים הכנת משקאות אלכוהוליים מגוונים, קוקטיילים, כלי עבודה של ברמן, סביבת עבודה מאחורי הבר, מושגים כלליים על עולם האלכוהול, תרגול מעשי, טעימות ועוד נושאים רבים אשר מכינים אתכם לחיי הלילה בברים. </p>
+					</div>
+
+					<p class="subtitle">למי זה מתאים?</p>
+
+					<ul class="who">
+						<li>חיילים משוחררים</li>
+						<li>סטודנטים</li>
+						<li>חיילים</li>
+					</ul>
+
+					<p class="subtitle">מה מקבלים?</p>
+
+					<ul class="what">
+						<li>תעודת בינלאומית W.B.S.A (היחידים בישראל).</li>
+						<li>השמה לעבודה בסיום הקורס.</li>
+						<li>תרגול קוקטיילים עם אלכוהול בלבד (היחידים בישראל)</li>
+						<li>תרגול בבר אמיתי (היחידים בישראל)</li>
+					</ul>
+
+					<div class="bar-bottom">
+						<div class="price-normal">
+							<p class="title">מחיר רגיל</p>
+							<p class="price">2,800</p>
+						</div>
+						<div class="price-sale">
+							<p class="title">מחיר הרשמה מוקדמת</p>
+							<p class="price">₪1,999</p>
+						</div>
+						<a href="#" class="button">
+							<span>לפרטים נוספים </span>
+						</a>
+					</div>
+				</div>
+				<div class="part part-left">
+					<img src="images/inner/courses/2.jpg" alt="">
 				</div>
 			</div>
 		</div>
